remove background fade, fix showing wrong icon in dark mode

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -3,7 +3,6 @@
 
 *, *::after, *::before {
   box-sizing: border-box;
-  transition: background-color 0.15s linear;
 }
 
 :root {
